--- a/api-guide/apis/enterprise-api/voice-cloning/music-gen.mdx
+++ b/api-guide/apis/enterprise-api/voice-cloning/music-gen.mdx
@@ -1,113 +1,74 @@
 ---
 title: "Enterprise: Music Gen Endpoint"
+description: "This endpoint is used to generate music based on textual prompts."
 ---
-
-## Overview[​](#overview "Direct link to Overview")
-
-The **Music Generation API** allows you to generate music based on textual prompts and optional conditioning melodies. This API is ideal for applications in music composition, sound design, and creative audio projects.
-
-[Open in Playground 🚀](https://audiogen.modelslab.com/)
-
-### **Sample Generation**[​](#sample-generation "Direct link to sample-generation")
-
-***
-
-### **Example 1: Without Conditioning**[​](#example-1-without-conditioning "Direct link to example-1-without-conditioning")
-
-#### **Prompt:**[​](#prompt "Direct link to prompt")
-
-> sitar, tabla, flute, Indian classical, fusion, meditative, G# minor, 96 bpm
-
-#### **Generated Music:**[​](#generated-music "Direct link to generated-music")
-
-[Your browser does not support the audio tag.](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/232bb4ff-addc-4974-bff9-b540951a9c3e.wav)
-
-***
-
-### **Example 2: With Conditioning**[​](#example-2-with-conditioning "Direct link to example-2-with-conditioning")
-
-#### **Prompt:**[​](#prompt-1 "Direct link to prompt-1")
-
-> marimba, percussion, bass, tropical house, melodic riff, G# minor, 96 bpm
-
-#### **Conditioning Melody:**[​](#conditioning-melody "Direct link to conditioning-melody")
-
-[Your browser does not support the audio tag.](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/IxizU51vL2IwiEjy6XtvbDECa9f16E-metaU2hhcGUgb2YgeW91IFJpbmd0b25lIO+9nO+9nCBJbnN0cnVtZW50YWwgQkdNIO+9nO+9nCBMSUdIVCBHT0pPLndhdg==-.wav)
-
-> **Note:** The conditioning melody link should be to a downloadable music file, not a YouTube Video/Music link.
-
-#### **Generated Music:**[​](#generated-music-1 "Direct link to generated-music-1")
-
-[Your browser does not support the audio tag.](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/e143f35e-8d69-4530-80df-e0cad201b3f6.wav)
-
-***
-
-## Request[​](#request "Direct link to Request")
-
-```
---request POST 'https://modelslab.com/api/v1/enterprise/voice/music_gen' \
-```
-
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/voice/music\_gen](https://modelslab.com/api/v1/enterprise/voice/music_gen) endpoint and pass the required parameters as a request body.
 
 <Warning>
   Make sure you add your [s3 details](/enterprise-api/general/update-s3-details) for `voice_cloning` server, so you can receive image generated in your bucket. Images generated without s3 details being added will be delete after **24 hours**
 </Warning>
 
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter           | Description                                                                                                                                       |
-| :------------------ | :------------------------------------------------------------------------------------------------------------------------------------------------ |
-| **key**             | Your API Key used for request authorization                                                                                                       |
-| **prompt**          | The input text for audio generation.                                                                                                              |
-| **init\_audio**     | The conditioning melody for audio generation                                                                                                      |
-| **sampling\_rate**  | The sampling rate of the generated audio.Upper Bound: No strict upper bound. Lower Bound: 10000 Default: 32000                                    |
-| **max\_new\_token** | The maximum number of new tokens for audio generation. Upper Bound: 1024 and Lower Bound: Minimum of 256.                                         |
-| **base64**          | Whether the input sound clip is in base64 or not. Should be `true` or `false`. Defaults to `false`.                                               |
-| **temp**            | Whether you want temporary links or not. This is useful if your country blocks access to our storage sites. Should be `true` or `false`. Defaults |
-| **webhook**         | Set an URL to get a POST API call once the image generation is complete.                                                                          |
-| **track\_id**       | This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.                                   |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
-```
-{    "key":"",    "prompt":"rock music from the 90s",   "init_audio":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/2e4c9960-7425-4720-82a1-a373063bf635.wav",    "sampling_rate":10000,    "base64":false,    "temp": false,    "webhook":null,    "track_id":null}
+## Request
+Make a `POST` request to below endpoint and pass the required parameters as a request body.
+```curl curl
+--request POST 'https://modelslab.com/api/v1/enterprise/voice/music_gen' \
 ```
 
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({    "key":"",    "prompt":"rock music from the 90s",    "init_audio":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/2e4c9960-7425-4720-82a1-a373063bf635.wav",    "sampling_rate":10000,    "base64":false,    "temp": false,    "webhook":null,    "track_id":null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/voice/music_gen", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [    "key" => "",    "prompt" => "rock music from the 90s",    "init_audio" => "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/2e4c9960-7425-4720-82a1-a373063bf635.wav",    "sampling_rate" => 10000,    "base64" => false,    "temp" => false,    "webhook" => null,    "track_id" => null ];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/voice/music_gen',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
+## Body
+```json json
+{    
+  "key":"enterprise_api_key",    
+  "prompt":"rock music from the 90s",   
+  "init_audio":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/2e4c9960-7425-4720-82a1-a373063bf635.wav",    
+  "sampling_rate":32000,    
+  "base64":false,
+  "temp": false,    
+  "webhook":null,    
+  "track_id":null
+}
 ```
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/voice/music_gen',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({     "key":"",    "prompt":"rock music from the 90s",    "init_audio":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/2e4c9960-7425-4720-82a1-a373063bf635.wav",    "sampling_rate":10000,    "base64":true,    "temp": false,    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+## Body Attributes
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/voice/music_gen"payload = json.dumps({    "key":"",    "prompt":"rock music from the 90s",    "init_audio":"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/2e4c9960-7425-4720-82a1-a373063bf635.wav",    "sampling_rate":10000,    "base64":False,    "temp": False,    "webhook": None,    "track_id":None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="key" type="string" required>
+  Your API Key used for request authorization.
+</ParamField>
 
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\":\"\",\n    \"prompt\":\"rock music from the 90s\",\n    \"init_audio\":\"https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/2e4c9960-7425-4720-82a1-a373063bf635.wav\",\n    \"sampling_rate\":10000,\n    \"base64\":true,\n    \"temp\": false,\n    \"webhook\":\"\",\n    \"track_id\":\"\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/voice/music_gen")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
+<ParamField query="prompt" type="string" required>
+  The input text for audio generation.
+</ParamField>
 
-### Response[​](#response "Direct link to Response")
+<ParamField query="init_audio" type="string">
+  The conditioning melody for audio generation.
+</ParamField>
 
-```
-{    "status": "success",    "generationTime": 4.8882811069488525,    "id": 310815,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/30ea5aee-fba8-4b65-bf71-2fc2b6b197c0.wav"    ],    "proxy_links": [        "https://cdn2.stablediffusionapi.com/generations/30ea5aee-fba8-4b65-bf71-2fc2b6b197c0.wav"    ],    "meta": {        "base64": "no",        "conditioning_melody": null,        "filename": "30ea5aee-fba8-4b65-bf71-2fc2b6b197c0.wav",        "input_text": "rock music from the 90s",        "max_new_token": 256,        "sampling_rate": 10000,        "temp": "no"    }}
-```
+<ParamField query="sampling_rate" type="integer" min="10000" default="32000">
+  The sampling rate of the generated audio. Lower bound: 10000, Default: 32000. No strict upper bound.
+</ParamField>
+
+<ParamField query="max_new_token" type="integer" min="256" max="1024" default="512">
+  The maximum number of new tokens for audio generation. Range: 256–1024.
+</ParamField>
+
+<ParamField query="base64" type="boolean" default="false">
+  Whether the input sound clip is in base64 format. Default: false.
+</ParamField>
+
+<ParamField query="temp" type="boolean" default="false">
+  Whether you want temporary links (useful if your country blocks access to storage sites). Default: false.
+</ParamField>
+
+<ParamField query="output_format" type="string" enum='["wav", "mp3", "flac"]' default="wav">
+  Allows you to specify the output format of the generated audio. Options: wav, mp3, flac. Default: wav.
+</ParamField>
+
+<ParamField query="bitrate" type="string" enum='["128k", "192k", "320k"]' default="128k">
+  The bitrate of the generated audio file. Higher bitrates improve quality but increase file size. Default: 128k.
+</ParamField>
+
+<ParamField query="webhook" type="string" format="url">
+  Provide a URL to receive a POST API call once the audio generation is complete.
+</ParamField>
+
+<ParamField query="track_id" type="string">
+  This ID is returned in the response to the webhook API call and will be used to identify the webhook request.
+</ParamField>
