--- a/api-guide/apis/enterprise-api/voice-cloning/sfx.mdx
+++ b/api-guide/apis/enterprise-api/voice-cloning/sfx.mdx
@@ -1,146 +1,54 @@
 ---
 title: "SFX Endpoint"
+description: "This endpoint allows you to generate sound effects (SFX) from text prompts."
+openapi: "POST /voice-cloning/sfx"
 ---
-
-## Overview[​](#overview "Direct link to Overview")
-
-The SFX endpoint allows you to generate sound effects (SFX) from text prompts. It takes user input in the form of a text prompt to conditionally generate audio effects.
-
-## **Sample Generation**[​](#sample-generation "Direct link to sample-generation")
-
-Cat Meow
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/6b0ff074-22ca-4809-b40e-519a5662d5f2.wav)
-
-Ambiance
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/ba768373-85b7-41f9-a93d-23da34af7438.wav)
-
-Thunder and Rain
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/67aa51ac-9ea2-46b8-81f2-d9bb9bdabf70.wav)
-
-Campfire
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/ef2e0003-bb99-4169-a56b-2e8052e9f2ab.wav)
-
-Rifles shooting
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/855bdaee-17d9-4834-b136-924cb2243d0a.wav)
-
-Birds
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/b8deb8ad-8699-48c9-b15a-db3c882e2742.wav)
-
-Crowd
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/d1b157fe-0bf0-4d80-89e5-ee293a173164.wav)
-
-Bicycle
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/3f44c359-7fb3-48fd-a4cc-c7406b0c0ed0.wav)
-
-Piano
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/1aa8de3b-d60e-4539-a078-4fc10c5b82bc.wav)
-
-Drum
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/df4ab38f-1ac1-4266-9849-e95fb8cafd48.wav)
-
-Fireworks
-
-►[](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/6b98734b-1fa5-4c75-903b-6e6ca9fbc9c9.wav)
-
-## **Sample Generation**[​](#sample-generation-1 "Direct link to sample-generation-1")
-
-***
-
-### **Example 1**[​](#example-1 "Direct link to example-1")
-
-#### **Prompt:**[​](#prompt "Direct link to prompt")
-
-> The sound of a bustling city street with footsteps, faint conversations, and vehicle sounds.
-
-#### **Generated Sound:**[​](#generated-sound "Direct link to generated-sound")
-
-[Your browser does not support the audio tag.](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/ldo3FbbiUZK3bThWKQXK8PQOdqFcUE-metaNWNkMjA3MzEtZGUyZS00OTIzLWJkODctZTYwODJlYjIwMTkyLndhdg==-.wav)
-
-***
-
-### **Example 2**[​](#example-2 "Direct link to example-2")
-
-#### **Prompt:**[​](#prompt-1 "Direct link to prompt-1")
-
-> Typing on a mechanical keyboard in a small office.
-
-#### **Generated Sound:**[​](#generated-sound-1 "Direct link to generated-sound-1")
-
-[Your browser does not support the audio tag.](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/10eo0hZ6x3yC3ppDf8F8MpkfAEBDBM-metaMTVkZWMyZjItNmVmZS00YjA4LWIzMmYtZDgxOWJhNGUxM2Q5Lndhdg==-.wav)
-
-***
-
-## Request[​](#request "Direct link to Request")
-
-```
---request POST 'https://modelslab.com/api/v1/enterprise/voice/sfx' \
-```
-
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/voice/sfx](https://modelslab.com/api/v1/enterprise/voice/sfx) endpoint and pass the required parameters as a request body.
 
 <Warning>
   Make sure you add your [s3 details](/enterprise-api/general/update-s3-details) for `voice_cloning` server, so you can receive image generated in your bucket. Images generated without s3 details being added will be delete after **24 hours**
 </Warning>
 
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter    | Description                                                                                       | Values            |
-| ------------ | ------------------------------------------------------------------------------------------------- | ----------------- |
-| **key**      | The API key required to authorize the request.                                                    | String            |
-| **prompt**   | A descriptive input that specifies the type of sound effect to generate.                          | String            |
-| **duration** | The length of the generated sound effect in seconds. Defaults to `10`. Range: `3` to `15` seconds | Integral value    |
-| **temp**     | Temporary links for regions blocking storage site access.                                         | `TRUE` or `FALSE` |
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
-```
-{    "key":"",    "prompt":"Thunderstorm with rain",    "temp": false,    "webhook": null,    "track_id": null}
+## Request
+Make a `POST` request to below endpoint and pass the required parameters as a request body.
+```curl curl
+--request POST 'https://modelslab.com/api/v1/enterprise/voice/sfx' \
 ```
 
-### Request[​](#request-1 "Direct link to Request")
-
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
-
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({    "key":"",    "prompt":"Thunderstorm with rain",    "temp": false,    "webhook": null,    "track_id": null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/voice/sfx", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
-
-```
-<?php$payload = [    "key" => "",    "prompt" => "Thunderstorm with rain",    "temp" => false,    "webhook" => null,    "track_id" => null ];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/voice/sfx',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
+## Body
+```json json
+{    
+  "key":"enterprise_api_key",    
+  "prompt":"Thunderstorm with rain",    
+  "output_format": "wav",
+  "bitrate": "128k",
+  "temp": false,    
+  "webhook": null,    
+  "track_id": null
+}
 ```
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/voice/sfx',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({     "key":"",    "prompt":"Thunderstorm with rain",    "temp": false,    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+## Body Attributes
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/voice/sfx"payload = json.dumps({    "key":"",    "prompt":"Thunderstorm with rain",    "temp": False,    "webhook": None,    "track_id":None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="key" type="string" required>
+  The API key required to authorize the request.
+</ParamField>
 
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\":\"\",\n    \"prompt\":\"Thunderstorm with rain\",\n      \"webhook\":\"\",\n    \"track_id\":\"\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/voice/sfx")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
+<ParamField query="prompt" type="string" required>
+  A descriptive input that specifies the type of sound effect to generate.
+</ParamField>
 
-### Response[​](#response "Direct link to Response")
+<ParamField query="duration" type="integer" min="3" max="15" default="10">
+  The length of the generated sound effect in seconds. Defaults to 10. Range: 3–15 seconds.
+</ParamField>
 
-```
-{  {  "eta": 5,  "fileId": "8b8f9044-bb13-4d2c-bc42-db427caf182d.wav",  "links": [    "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/8b8f9044-bb13-4d2c-bc42-db427caf182d.wav"  ],  "message": "Request has been queued",  "meta": {    "filename": "8b8f9044-bb13-4d2c-bc42-db427caf182d.wav",    "prompt": "man laughing",    "temp": "no"  },  "proxy_links": [    "https://cdn2.stablediffusionapi.com/generations/8b8f9044-bb13-4d2c-bc42-db427caf182d.wav"  ],  "seconds": null,  "status": "queued",  "taskId": "a3525188-a894-47ea-9946-1e5a8f2c4abb"}}
-```
+<ParamField query="temp" type="boolean" default="false">
+  Whether to generate temporary links (useful for regions blocking storage site access). Default: false.
+</ParamField>
+
+<ParamField query="output_format" type="string" enum='["wav", "mp3", "flac"]' default="wav">
+  The output format of the generated sound effect. Options: wav, mp3, flac. Default: wav.
+</ParamField>
+
+<ParamField query="bitrate" type="string" enum='["128k", "192k", "320k"]' default="128k">
+  The bitrate of the generated sound effect. Higher bitrates improve quality but increase file size. Default: 128k.
+</ParamField>
