--- a/api-guide/apis/enterprise-api/voice-cloning/text-to-audio.mdx
+++ b/api-guide/apis/enterprise-api/voice-cloning/text-to-audio.mdx
@@ -1,102 +1,75 @@
 ---
-title: "Enterprise: Text to Audio Endpoint"
+title: "Enterprise: Voice cloning Endpoint"
+description: "The Voice cloning endpoint enables you to generate audio by providing a text input along with a valid audio URL or a pre-created voice using a voice_id."
 ---
-
-## Overview[​](#overview "Direct link to Overview")
-
-The Text-to-Audio endpoint enables you to generate audio by providing a text input along with a valid audio URL or a pre-created voice using a [voice\_id](https://modelslab.com/voice-lists). The output is an audio file that mimics the sound of the provided audio URL or the selected voice.
 
 <Warning>
   Make sure you add your [s3 details](/enterprise-api/general/update-s3-details) for `voice_cloning` server, so you can receive image generated in your bucket. Images generated without s3 details being added will be delete after **24 hours**
 </Warning>
 
-[Open in Playground 🚀](https://audiogen.modelslab.com/)
+<Info>
+[voice_id](https://modelslab.com/voice-lists) can be found here.
+</Info>
 
-## **Sample Generation**[​](#sample-generation "Direct link to sample-generation")
-
-***
-
-### **Init Audio Clip**[​](#init-audio-clip "Direct link to init-audio-clip")
-
-[Your browser does not support the audio tag.](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/yNcEINEPITStQQcmFMgX0ULXvjzl5M-metaaW5pdF9hdWRpb19zbXBsZSAoMykud2F2-.wav)
-
-### **Example 1**[​](#example-1 "Direct link to example-1")
-
-#### **Prompt**[​](#prompt "Direct link to prompt")
-
-> In the ancient land of Eldoria, where the skies were painted with shades of mystic hues and the forests whispered secrets of old, there existed a dragon named Zephyros. Unlike the fearsome tales of dragons that plagued human hearts with terror, Zephyros was a creature of wonder and wisdom, revered by all who knew of his existence.
-
-***
-
-### **Generated Speech**[​](#generated-speech "Direct link to generated-speech")
-
-[Your browser does not support the audio tag.](https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/livewire-tmp/MV7poGFhidet1Q0Ib8DMJ4WIeNc8QP-metaYXVkaW8oNCkoMSkud2F2-.wav)
-
-## Request[​](#request "Direct link to Request")
-
-```
+## Request
+Make a `POST` request to below endpoint and pass the required parameters as a request body.
+```curl curl
 --request POST 'https://modelslab.com/api/v1/enterprise/voice/text_to_audio' \
 ```
+<Note>
+You can either pass `init_audio` or `voice_id`. However, if both are passed at the same time the `init_audio` takes preference.
+</Note>
 
-Make a `POST` request to [https://modelslab.com/api/v1/enterprise/voice/text\_to\_audio](https://modelslab.com/api/v1/enterprise/voice/text_to_audio) endpoint and pass the required parameters as a request body.
-
-## Body Attributes[​](#body-attributes "Direct link to Body Attributes")
-
-| Parameter       | Description                                                                                                                                                                                                                                                |
-| :-------------- | :--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **key**         | Your API Key used for request authorization                                                                                                                                                                                                                |
-| **prompt**      | Text prompt with description of the audio you want to generate                                                                                                                                                                                             |
-| **init\_audio** | A valid audio url you want it voice cloned (min 4 seconds) to (max 30 seconds)                                                                                                                                                                             |
-| **voice\_id**   | Optional, A valid id from the [lists of voices](https://modelslab.com/voice-lists)                                                                                                                                                                         |
-| **language**    | The language of the voice. The supported languages includes `english`, `arabic`, `chinese`, `spanish`, `german` , `czech` , `dutch`, `french`, `hindi`, `hungarian`, `italian`, `japanese`, `korean`, `polish`, `russian`, `turkish`. Default is `english` |
-| **emotion**     | One of `neutral`, `happy`, `sad`, `angry`,`dull`. Defaults to `neutral`                                                                                                                                                                                    |
-| **base64**      | Whether the input sound clip is in base64 or not. Should be `true` or `false`. Defaults to `false`.                                                                                                                                                        |
-| **temp**        | Whether you want temporary links or not. This is useful if your country blocks access to our storage sites. Should be `true` or `false`. Defaults                                                                                                          |
-| **webhook**     | Set an URL to get a POST API call once the image generation is complete.                                                                                                                                                                                   |
-| **track\_id**   | This ID is returned in the response to the webhook API call. This will be used to identify the webhook request.                                                                                                                                            |
-
-Note: You can either pass `init_audio` or `voice_id`. However, if both are passed at the same time the `init_audio` takes preference.
-
-## Example[​](#example "Direct link to Example")
-
-### Body[​](#body "Direct link to Body")
-
-Body
-
-```
-{    "key": "", "prompt":"Narrative voices capable of pronouncing terminologies & acronyms in training and ai learning materials.", "init_audio":"https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav", "language":"english", "webhook": null, "track_id": null}
+## Body
+```json json
+{    
+  "key": "enteprise_api_key", 
+  "prompt":"Narrative voices capable of pronouncing terminologies & acronyms in training and ai learning materials.", 
+  "init_audio":"https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav", 
+  "language":"english", 
+  "webhook": null, 
+  "track_id": null
+}
 ```
 
-### Request[​](#request-1 "Direct link to Request")
+## Body Attributes
 
-* JS
-* PHP
-* NODE
-* PYTHON
-* JAVA
+<ParamField query="key" type="string" required>
+  Your API Key used for request authorization.
+</ParamField>
 
-```
-var myHeaders = new Headers();myHeaders.append("Content-Type", "application/json");var raw = JSON.stringify({  "key": "",  "prompt":"Narrative voices capable of pronouncing terminologies & acronyms in training and ai learning materials.",  "init_audio":"https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav",  "language":"english",  "webhook": null,  "track_id": null});var requestOptions = {  method: 'POST',  headers: myHeaders,  body: raw,  redirect: 'follow'};fetch("https://modelslab.com/api/v1/enterprise/voice/text_to_audio", requestOptions)  .then(response => response.text())  .then(result => console.log(result))  .catch(error => console.log('error', error));
-```
+<ParamField query="prompt" type="string" required>
+  Text prompt with description of the audio you want to generate.
+</ParamField>
 
-```
-<?php$payload = [  "key" => "",  "prompt" => "Narrative voices capable of pronouncing terminologies & acronyms in training and ai learning materials.",  "init_audio" => "https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav",  "language" => "english",  "webhook" => null,   "track_id" => null ];$curl = curl_init();curl_setopt_array($curl, array(  CURLOPT_URL => 'https://modelslab.com/api/v1/enterprise/voice/text_to_audio',  CURLOPT_RETURNTRANSFER => true,  CURLOPT_ENCODING => '',  CURLOPT_MAXREDIRS => 10,  CURLOPT_TIMEOUT => 0,  CURLOPT_FOLLOWLOCATION => true,  CURLOPT_HTTP_VERSION => CURL_HTTP_VERSION_1_1,  CURLOPT_CUSTOMREQUEST => 'POST',  CURLOPT_POSTFIELDS => json_encode($payload),  CURLOPT_HTTPHEADER => array(    'Content-Type: application/json'  ),));$response = curl_exec($curl);curl_close($curl);echo $response;
-```
+<ParamField query="init_audio" type="string" format="url">
+  A valid audio URL to be voice-cloned. Minimum length: 4 seconds, Maximum length: 30 seconds.
+</ParamField>
 
-```
-var request = require('request');var options = {  'method': 'POST',  'url': 'https://modelslab.com/api/v1/enterprise/voice/text_to_audio',  'headers': {    'Content-Type': 'application/json'  },  body: JSON.stringify({    "key": "",    "prompt":"Narrative voices capable of pronouncing terminologies & acronyms in training and ai learning materials.",    "init_audio":"https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav",    "language":"english",    "webhook": null,    "track_id": null  })};request(options, function (error, response) {  if (error) throw new Error(error);  console.log(response.body);});
-```
+<ParamField query="voice_id" type="string">
+  Optional. A valid ID from the <a href="https://modelslab.com/voice-lists" target="_blank">list of voices</a>.
+</ParamField>
 
-```
-import requestsimport jsonurl = "https://modelslab.com/api/v1/enterprise/voice/text_to_audio"payload = json.dumps({  "key": "",  "prompt":"Narrative voices capable of pronouncing terminologies & acronyms in training and ai learning materials.",  "init_audio":"https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav",  "language":"english",  "webhook": None,  "track_id": None})headers = {  'Content-Type': 'application/json'}response = requests.request("POST", url, headers=headers, data=payload)print(response.text)
-```
+<ParamField query="language" type="string" enum='["english", "arabic", "chinese", "spanish", "german", "czech", "dutch", "french", "hindi", "hungarian", "italian", "japanese", "korean", "polish", "russian", "turkish"]' default="english">
+  The language of the voice. Default: english.
+</ParamField>
 
-```
-OkHttpClient client = new OkHttpClient().newBuilder()  .build();MediaType mediaType = MediaType.parse("application/json");RequestBody body = RequestBody.create(mediaType, "{\n    \"key\":\"\",\n    \"prompt\":\"Narrative voices capable of pronouncing terminologies & acronyms in training and ai learning materials.\",\n    \"init_audio\":\"https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav\",\n    \"language\":\"english\"\n}");Request request = new Request.Builder()  .url("https://modelslab.com/api/v1/enterprise/voice/text_to_audio")  .method("POST", body)  .addHeader("Content-Type", "application/json")  .build();Response response = client.newCall(request).execute();
-```
+<ParamField query="emotion" type="string" enum='["neutral", "happy", "sad", "angry", "dull"]' default="neutral">
+  The emotional tone of the generated voice. Options: neutral, happy, sad, angry, dull. Default: neutral.
+</ParamField>
 
-### Response[​](#response "Direct link to Response")
+<ParamField query="base64" type="boolean" default="false">
+  Whether the input sound clip is in base64 format. Default: false.
+</ParamField>
 
-```
-{    "status": "success",    "generationTime": 1.4285192489624,    "id": 334166,    "output": [        "https://pub-3626123a908346a7a8be8d9295f44e26.r2.dev/generations/b2dff60e-4636-4178-9a72-04a10a309185.wav"    ],    "proxy_links": [        "https://cdn2.stablediffusionapi.com/generations/b2dff60e-4636-4178-9a72-04a10a309185.wav"    ],    "meta": {        "base64": "no",        "emotion": "Neutral",        "filename": "b2dff60e-4636-4178-9a72-04a10a309185.wav",        "input_sound_clip": [            "tmp/0-b2dff60e-4636-4178-9a72-04a10a309185.wav"        ],        "input_text": "Narrative voices capable of pronouncing terminologies & acronyms in training and ai learning materials.",        "language": "english",        "speed": 1,        "temp": "no"    }}
-```
+<ParamField query="temp" type="boolean" default="false">
+  Whether you want temporary links (useful if your country blocks access to storage sites). Default: false.
+</ParamField>
+
+<ParamField query="webhook" type="string" format="url">
+  Provide a URL to receive a POST API call once the audio generation is complete.
+</ParamField>
+
+<ParamField query="track_id" type="string">
+  This ID is returned in the response to the webhook API call and will be used to identify the request.
+</ParamField>
